--- a/style.css
+++ b/style.css
@@ -10,49 +10,132 @@ body {
     font-family: 'Montserrat', sans-serif;
     display: flex;
     flex-flow: column nowrap;
+    background-color: gainsboro;
+    height: 100vh;
 }
 
 #header, #main, #footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 16px;
+    gap: 48px;
+    padding: 16px 32px 16px 32px;
+    flex-flow: wrap-reverse;
 }
 
-#header button {
+#main {
+    margin-bottom: 32px;
+}
+
+#header h1 {
+    font-size: 48px;
+}
+
+.sidebar {
+    display: flex;
+    flex: 0 1 auto;
+    flex-flow: column;
+    justify-content: center;
+    gap: 16px;
+    height: 480px;
+    width: 240px;
+}
+
+.sidebar button {
     border-radius: 4px;
     border: 0;
-    padding: 8px 16px 8px 16px;
-    font-size: 16px;
+    padding: 12px 16px 12px 16px;
+    font-size: 24px;
     background-color: aliceblue;
-    transition: all 1s;
+    transition: all 0.5s;
 }
 
-#header button:hover {
-    background-color: aqua;
+.sidebar button:hover {
+    box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.2);
     cursor: pointer;;
 }
 
 .container {
     display: flex;
+    flex: 0 0 auto;
     flex-flow: column nowrap;
     align-items: center;
     justify-content: center;
-    height: 480px;
-    width: 480px;
+    height: 560px;
+    width: 560px;
+    border: solid 4px black;
+}
+
+@media screen and (max-width: 600px) {
+    .container {
+        height: 360px;
+        width: 360px;
+    }
 }
 
 .row {
     flex: 1 0 auto;
     width: 100%;
     display: flex;
+    background-color: white;
 }
 
 .row div {
     flex: 1 1 auto;
-    background-color: aliceblue;
+    cursor: pointer;
+
+    user-drag: none;
+    -webkit-user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 
-.row div:hover {
-    background-color: aqua;
+.drown {
+    background-color: black;
 }
+
+.toggledGrid {
+    border: solid 0.5px gray;
+}
+
+@keyframes colorRotate {
+    from {
+      background-color: #6666ff;
+    }
+    10% {
+        background-color: #0099ff;
+    }
+    50% {
+        background-color: #00ff00;
+    }
+    75% {
+        background-color: #ff3399;
+    }
+    100% {
+        background-color: #6666ff;
+    }
+  }
+
+  #footer {
+      margin-top: auto;
+      background-color: black;
+  }
+
+  #footer div {
+      color: white;
+      text-align: center;
+      padding: 16px;
+  }
+
+  #footer a {
+    text-decoration: none;
+    padding: 2px;
+    color: white;
+    transition: all 1s;
+}
+
+  #footer a:hover {
+      color: plum;
+  }
